#1605 closed defect (fixed)
seek issue for realmedia files
| Reported by: | Abu Abdullah | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | undetermined |
| Version: | git-master | Keywords: | cook |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
Summary of the bug: seeking in a realmedia file will play the beginning of the file for short period then start from the point you are seeking.
How to reproduce:
% ffplay.exe -ss 50.6 -i 08.rm ffplay version N-43206-gf857465 Copyright (c) 2003-2012 the FFmpeg developers built on Aug 4 2012 16:14:25 with gcc 4.7.1 (GCC)
The file is uploaded on:
http://www.mediafire.com/?3e3f1h1175e7c3v
Attachments (2)
Change History (15)
comment:1 by , 14 years ago
comment:2 by , 14 years ago
Could you test 9b1f776 ?
It sounds different here, but due to the language barrier I can't say if it is correct or if the bug manifests itself differently with the older version.
comment:3 by , 14 years ago
sorry, here it is:
ffplay.exe -ss 50.6 -i 08.rm
ffplay version N-43206-gf857465 Copyright (c) 2003-2012 the FFmpeg developers
built on Aug 4 2012 16:14:25 with gcc 4.7.1 (GCC)
configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libass
--enable-libcelt --enable-libopencore-amrnb --enable-libopencore-amrwb --enable
-libfreetype --enable-libgsm --enable-libmp3lame --enable-libnut --enable-libope
njpeg --enable-librtmp --enable-libschroedinger --enable-libspeex --enable-libth
eora --enable-libutvideo --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-
libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-libxvid --e
nable-zlib
libavutil 51. 66.100 / 51. 66.100
libavcodec 54. 49.100 / 54. 49.100
libavformat 54. 22.100 / 54. 22.100
libavdevice 54. 2.100 / 54. 2.100
libavfilter 3. 5.102 / 3. 5.102
libswscale 2. 1.100 / 2. 1.100
libswresample 0. 15.100 / 0. 15.100
libpostproc 52. 0.100 / 52. 0.100
[rm @ 00000000044bcb40] Unsupported stream type 00000174
Input #0, rm, from '08.rm':
Metadata:
title :
author :
copyright :
comment :
Duration: 00:46:59.82, start: 0.000000, bitrate: 11 kb/s
Stream #0:0: Audio: cook (cook / 0x6B6F6F63), 11025 Hz, mono, flt, 11 kb/s
Stream #0:1: Data: none
50.04 A-V: 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
I'm not able to find 9b1f776 in: http://ffmpeg.zeranoe.com/builds/win32/static/
On the other hand i faced this when using mplayer2 and report some tickets but it seems to me now it is related to ffmpeg:
http://devel.mplayer2.org/ticket/193
comment:4 by , 14 years ago
please note that the line:
50.04 A-V: 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
is not the first one since it is been overridden each time with the new value.
comment:5 by , 14 years ago
| Keywords: | cook added |
|---|---|
| Version: | unspecified → git-master |
Can you confirm that the following also allows to reproduce the problem?
$ ffmpeg -ss 50.6 -i 08.rm -t 10 out.wav
(Reports for ffplay are generally only valid if the problem is not reproducible with ffmpeg.)
comment:6 by , 14 years ago
yes it reproduces the problem and the output is clearly consisting of a small portion of the beginning of the file:
log file is attached for the output
by , 14 years ago
by , 14 years ago
| Attachment: | 9b1f776.wav added |
|---|
comment:7 by , 14 years ago
I have attached the result of above command for 9b1f776. Does it sound correct?
comment:8 by , 14 years ago
no, it has the same result. There is around 2 seconds from the beginning of the file.
There is very little difference, in version 9b1f776, the unwanted portion start from offset 0 but for the latest version it is just a fraction after the beginning of the file i.e.
9b1f776: 0 -> 2 then seeking point
gf857465: 0.x -> 2 then seeking point
comment:9 by , 14 years ago
| Reproduced by developer: | set |
|---|---|
| Status: | new → open |
comment:10 by , 14 years ago
Please check as well the seeking point itself, it seems it is shifted by the same amount i.e.
0 -> 2 then (seeking point+2)
comment:11 by , 13 years ago
Ticket #2232 contains a test-case that is easier to reproduce:
$ ffmpeg -ss 24 -i \[CCCP\]_Mega_Weird_Audio_Test.mkv -map 0:26 out.wav
ffmpeg version N-49553-g13eb9fc Copyright (c) 2000-2013 the FFmpeg developers
built on Feb 3 2013 14:58:47 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl --disable-indev=jack
libavutil 52. 17.100 / 52. 17.100
libavcodec 54. 91.100 / 54. 91.100
libavformat 54. 61.104 / 54. 61.104
libavdevice 54. 3.103 / 54. 3.103
libavfilter 3. 35.100 / 3. 35.100
libswscale 2. 2.100 / 2. 2.100
libswresample 0. 17.102 / 0. 17.102
libpostproc 52. 2.100 / 52. 2.100
[wmalossless @ 0x361dda0] Bit-depth higher than 16 is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[wmalossless @ 0x36242c0] Bit-depth higher than 16 is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[mpeg4 @ 0x3584dc0] Invalid and inefficient vfw-avi packed B frames detected
[wmalossless @ 0x361dda0] Bit-depth higher than 16 is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
[wmalossless @ 0x36242c0] Bit-depth higher than 16 is not implemented. Update your FFmpeg version to the newest one from Git. If the problem still occurs, it means that your file has a feature which has not been implemented.
Guessed Channel Layout for Input Stream #0.6 : stereo
Guessed Channel Layout for Input Stream #0.7 : stereo
Guessed Channel Layout for Input Stream #0.8 : mono
Guessed Channel Layout for Input Stream #0.10 : stereo
Guessed Channel Layout for Input Stream #0.11 : stereo
Guessed Channel Layout for Input Stream #0.14 : stereo
Guessed Channel Layout for Input Stream #0.15 : stereo
Guessed Channel Layout for Input Stream #0.17 : stereo
Guessed Channel Layout for Input Stream #0.22 : 5.1
Guessed Channel Layout for Input Stream #0.23 : stereo
Guessed Channel Layout for Input Stream #0.25 : stereo
Input #0, matroska,webm, from '[CCCP]_Mega_Weird_Audio_Test.mkv':
Metadata:
title : Macross Plus - First Simulator Test
creation_time : 2006-08-07 03:59:51
Duration: 00:01:03.71, start: 0.000000, bitrate: 6167 kb/s
Stream #0:0(eng): Video: mpeg4 (Advanced Simple Profile) (XVID / 0x44495658), yuv420p, 656x464 [SAR 1:1 DAR 41:29], SAR 116:123 DAR 4:3, 23.98 fps, 23.98 tbr, 1k tbn, 23.98 tbc (default)
Metadata:
title : Macross Plus - First Simulator Test
Stream #0:1(eng): Audio: ac3, 48000 Hz, 5.1(side), fltp, 448 kb/s (default)
Metadata:
title : AC3 6ch Audio
Stream #0:2(jpn): Audio: ac3, 48000 Hz, stereo, fltp, 192 kb/s
Metadata:
title : AC3 2ch Audio
Stream #0:3(eng): Audio: mp3, 48000 Hz, stereo, s16p, 192 kb/s
Metadata:
title : AudX HGHQ 6ch Audio
Stream #0:4(eng): Audio: mp3, 48000 Hz, mono, s16p, 192 kb/s
Metadata:
title : AudX SPBQ 6ch Audio
Stream #0:5(jpn): Audio: sipr (0[1][0][0] / 0x0130), 16000 Hz, mono, flt, 16 kb/s
Metadata:
title : ACELP Sipro Mono Audio
Stream #0:6(jpn): Audio: adpcm_ms ([2][0][0][0] / 0x0002), 11025 Hz, stereo, s16, 88 kb/s
Metadata:
title : MS ADPCM 2ch Audio
Stream #0:7(jpn): Audio: adpcm_ima_wav ([17][0][0][0] / 0x0011), 11025 Hz, stereo, s16p, 88 kb/s
Metadata:
title : IMA ADPCM 2ch Audio
Stream #0:8(jpn): Audio: adpcm_yamaha ( [0][0][0] / 0x0020), 16000 Hz, mono, s16, 64 kb/s
Metadata:
title : Yamaha ADPCM Mono Audio
Stream #0:9(jpn): Audio: adpcm_g726 (E[0][0][0] / 0x0045), 8000 Hz, mono, s16, 32 kb/s
Metadata:
title : G.726 ADPCM Mono Audio
Stream #0:10(jpn): Audio: pcm_mulaw ([7][0][0][0] / 0x0007), 8000 Hz, stereo, s16, 128 kb/s
Metadata:
title : μ-Law 2ch Audio
Stream #0:11(jpn): Audio: pcm_alaw ([6][0][0][0] / 0x0006), 8000 Hz, stereo, s16, 128 kb/s
Metadata:
title : A-Law 2ch Audio
Stream #0:12(jpn): Audio: gsm_ms (1[0][0][0] / 0x0031), 44100 Hz, mono, s16, 71 kb/s
Metadata:
title : GSM 6.10 Mono Audio
Stream #0:13(jpn): Audio: truespeech ([34][0][0][0] / 0x0022), 8000 Hz, mono, s16, 8 kb/s
Metadata:
title : TrueSpeech Mono Audio
Stream #0:14(jpn): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, stereo, fltp, 64 kb/s
Metadata:
title : WMA7 2ch Audio
Stream #0:15(jpn): Audio: wmav2 (a[1][0][0] / 0x0161), 44100 Hz, stereo, fltp, 64 kb/s
Metadata:
title : WMA8 2ch Audio
Stream #0:16(jpn): Audio: wmavoice ([10][0][0][0] / 0x000A), 22050 Hz, mono, flt, 20 kb/s
Metadata:
title : WMA9 Voice Mono Audio
Stream #0:17(jpn): Audio: wmav2 (a[1][0][0] / 0x0161), 48000 Hz, stereo, fltp, 64 kb/s
Metadata:
title : WMA9.2 Std 2ch Audio
Stream #0:18(eng): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, 5.1, fltp, 192 kb/s
Metadata:
title : WMA9.1 Pro 6ch Audio
Stream #0:19(jpn): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, stereo, fltp, 80 kb/s
Metadata:
title : WMA9.1 Pro 2ch Audio
Stream #0:20(eng): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, 5.1, fltp, 192 kb/s
Metadata:
title : WMA10 Pro 6ch Audio
Stream #0:21(jpn): Audio: wmapro (b[1][0][0] / 0x0162), 48000 Hz, stereo, fltp, 64 kb/s
Metadata:
title : WMA10 Pro 2ch Audio
Stream #0:22(eng): Audio: wmalossless (c[1][0][0] / 0x0163), 48000 Hz, 5.1, s32p, 1882 kb/s
Metadata:
title : WMA9.1 Lossless 6ch Audio
Stream #0:23(jpn): Audio: wmalossless (c[1][0][0] / 0x0163), 48000 Hz, stereo, s32p, 774 kb/s
Metadata:
title : WMA9.1 Lossless 2ch Audio
Stream #0:24(jpn): Audio: cook, 44100 Hz, stereo, fltp
Metadata:
title : RA6 G2 Cook 2ch Audio
Stream #0:25(jpn): Audio: atrac3, 44100 Hz, stereo, fltp
Metadata:
title : RA8 ATRC 2ch Audio
Stream #0:26(eng): Audio: cook, 44100 Hz, 5.1, fltp
Metadata:
title : RA8 Cook 6ch Audio
Stream #0:27(jpn): Audio: cook, 44100 Hz, stereo, fltp
Metadata:
title : RA8 Cook 2ch Audio
Stream #0:28(jpn): Audio: cook, 44100 Hz, mono, fltp
Metadata:
title : RA8 Cook Mono Audio
Stream #0:29(jpn): Audio: aac, 32000 Hz, stereo, fltp
Metadata:
title : RA10 RAAC 2ch Audio
Stream #0:30(jpn): Audio: aac, 44100 Hz, stereo, fltp
Metadata:
title : RA10 RACP 2ch Audio
Output #0, wav, to 'out.wav':
Metadata:
INAM : Macross Plus - First Simulator Test
ISFT : Lavf54.61.104
Stream #0:0(eng): Audio: pcm_s16le ([1][0][0][0] / 0x0001), 44100 Hz, 5.1, s16, 4233 kb/s
Metadata:
title : RA8 Cook 6ch Audio
Stream mapping:
Stream #0:26 -> #0:0 (cook -> pcm_s16le)
Press [q] to stop, [?] for help
[matroska,webm @ 0x3580fc0] File is broken, keyframes not correctly marked!
size= 20616kB time=00:00:37.50 bitrate=4503.3kbits/s
video:0kB audio:20616kB subtitle:0 global headers:0kB muxing overhead 0.000692%
comment:12 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
comment:13 by , 13 years ago
It is working fine now but it gives very tiny ring (or echo) at the beginning.



Please provide complete, uncut console output.